kubernetes/opa-gatekeeper/opa/image-not-latest.yaml
---

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: image-not-be-latest
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - production
  parameters:
    tags: ["latest"]
